# ExtractAI

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  002_intelligence_profiles.py  003_strategy_engine.py  004_network_intelligence.py  005_batch_extraction.py  006_ai_understanding.py  007_email_verification.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  chunking.py
backend/app/api/: deps.py
backend/app/consolidation/: __init__.py  engine.py
backend/app/core/: config.py  constants.py  database.py  exceptions.py  logging.py  security.py
backend/app/discovery/: __init__.py  bundle.py  engine.py  robots.py
backend/app/engines/: __init__.py  pipeline.py  versions.py
backend/app/extractors/: __init__.py  base.py  basic.py  factory.py  llm.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  ai_understanding_cache.py  api_endpoint.py  api_key.py  base.py  batch.py  email_verification.py  execution_source.py  export.py  extracted_data.py  guest_session.py  job.py  network_profile.py  network_request.py  performance_metric.py  pipeline_log.py  pipeline_version.py  plugin_registry.py  refresh_token.py  snapshot.py  strategy_analysis.py  strategy_decision.py  user.py  user_settings.py  website_profile.py
backend/app/network/: __init__.py  capture.py  engine.py  (+7 more)
backend/scripts/: README.md  benchmark_level57.py  scrape.py  scrape_all.py
(+202 files in other folders)
